@@ -1,102 +1,111 @@
 package com.depromeet.threedollar.api.user.service.store;
 
-import com.depromeet.threedollar.common.model.CoordinateValue;
+import static com.depromeet.threedollar.api.user.service.store.StoreServiceUtils.findAroundStoresFilerByCategory;
+
+import java.time.LocalDate;
+import java.util.Collection;
+import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import com.depromeet.threedollar.api.user.service.store.dto.request.CheckExistsStoresNearbyRequest;
+import com.depromeet.threedollar.api.user.service.store.dto.request.RetrieveAroundStoresRequest;
 import com.depromeet.threedollar.api.user.service.store.dto.request.RetrieveMyStoresRequest;
-import com.depromeet.threedollar.api.user.service.store.dto.request.RetrieveNearStoresRequest;
 import com.depromeet.threedollar.api.user.service.store.dto.request.RetrieveStoreDetailRequest;
+import com.depromeet.threedollar.api.user.service.store.dto.response.CheckExistStoresNearbyResponse;
 import com.depromeet.threedollar.api.user.service.store.dto.response.StoreDetailResponse;
+import com.depromeet.threedollar.api.user.service.store.dto.response.StoreInfoResponse;
 import com.depromeet.threedollar.api.user.service.store.dto.response.StoreWithVisitsAndDistanceResponse;
 import com.depromeet.threedollar.api.user.service.store.dto.response.StoresCursorResponse;
-import com.depromeet.threedollar.api.user.service.store.dto.response.CheckExistStoresNearbyResponse;
+import com.depromeet.threedollar.common.model.LocationValue;
 import com.depromeet.threedollar.domain.rds.common.support.CursorPagingSupporter;
 import com.depromeet.threedollar.domain.rds.user.collection.user.UserDictionary;
 import com.depromeet.threedollar.domain.rds.user.collection.visit.VisitHistoryCounter;
 import com.depromeet.threedollar.domain.rds.user.domain.review.Review;
 import com.depromeet.threedollar.domain.rds.user.domain.review.ReviewRepository;
 import com.depromeet.threedollar.domain.rds.user.domain.store.Store;
+import com.depromeet.threedollar.domain.rds.user.domain.store.StoreImageRepository;
 import com.depromeet.threedollar.domain.rds.user.domain.store.StoreRepository;
-import com.depromeet.threedollar.domain.rds.user.domain.storeimage.StoreImage;
-import com.depromeet.threedollar.domain.rds.user.domain.storeimage.StoreImageRepository;
+import com.depromeet.threedollar.domain.rds.user.domain.store.projection.StoreImageProjection;
+import com.depromeet.threedollar.domain.rds.user.domain.store.projection.StoreWithMenuProjection;
 import com.depromeet.threedollar.domain.rds.user.domain.user.UserRepository;
 import com.depromeet.threedollar.domain.rds.user.domain.visit.VisitHistoryRepository;
 import com.depromeet.threedollar.domain.rds.user.domain.visit.projection.VisitHistoryWithUserProjection;
+import com.depromeet.threedollar.domain.redis.domain.user.store.AroundUserStoresCacheRepository;
+
 import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
-import java.time.LocalDate;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-import static com.depromeet.threedollar.api.user.service.store.StoreServiceUtils.findNearStoresFilterByCategory;
 
 @RequiredArgsConstructor
 @Service
 public class StoreRetrieveService {
 
     private final StoreRepository storeRepository;
+    private final AroundUserStoresCacheRepository aroundUserStoresCacheRepository;
+
     private final StoreImageRepository storeImageRepository;
     private final UserRepository userRepository;
     private final ReviewRepository reviewRepository;
     private final VisitHistoryRepository visitHistoryRepository;
 
     @Transactional(readOnly = true)
-    public List<StoreWithVisitsAndDistanceResponse> getNearStores(RetrieveNearStoresRequest request, CoordinateValue geoCoordinate, CoordinateValue mapCoordinate) {
-        List<Store> nearStores = findNearStoresFilterByCategory(storeRepository, mapCoordinate.getLatitude(), mapCoordinate.getLongitude(), request.getDistance(), request.getCategory());
-        VisitHistoryCounter visitHistoriesCounter = findVisitHistoriesCountByStoreIdsInDuration(nearStores);
-        return nearStores.stream()
-            .map(store -> StoreWithVisitsAndDistanceResponse.of(store, geoCoordinate.getLatitude(), geoCoordinate.getLongitude(), visitHistoriesCounter))
+    public List<StoreWithVisitsAndDistanceResponse> retrieveAroundStores(RetrieveAroundStoresRequest request, LocationValue deviceLocation, LocationValue mapLocation) {
+        List<StoreInfoResponse> aroundStoresFilerByCategory = findAroundStoresFilerByCategory(storeRepository, aroundUserStoresCacheRepository, mapLocation.getLatitude(), mapLocation.getLongitude(), request.getDistance(), request.getCategory());
+        VisitHistoryCounter visitHistoriesCounter = findVisitHistoriesCountByStoreIdsInDuration(aroundStoresFilerByCategory.stream()
+            .map(StoreInfoResponse::getStoreId)
+            .collect(Collectors.toList()));
+        return aroundStoresFilerByCategory.stream()
+            .map(store -> StoreWithVisitsAndDistanceResponse.of(store, deviceLocation, visitHistoriesCounter))
             .sorted(request.getSorted())
+            .limit(request.getSize())
             .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
-    public StoreDetailResponse getDetailStoreInfo(RetrieveStoreDetailRequest request, CoordinateValue geoCoordinate) {
+    public StoreDetailResponse retrieveStoreDetailInfo(RetrieveStoreDetailRequest request, LocationValue deviceLocation) {
         Store store = StoreServiceUtils.findStoreByIdFetchJoinMenu(storeRepository, request.getStoreId());
         List<Review> reviews = reviewRepository.findAllByStoreId(request.getStoreId());
-        List<StoreImage> storeImages = storeImageRepository.findAllByStoreId(request.getStoreId());
+        List<StoreImageProjection> storeImages = storeImageRepository.findAllByStoreId(request.getStoreId());
         List<VisitHistoryWithUserProjection> visitHistories = visitHistoryRepository.findAllVisitWithUserByStoreIdAfterDate(request.getStoreId(), request.getStartDate());
         UserDictionary userDictionary = UserDictionary.of(userRepository.findAllByUserId(concatUserIds(reviews, visitHistories, store)));
-        VisitHistoryCounter visitHistoriesCounter = findVisitHistoriesCountByStoreIdsInDuration(Collections.singletonList(store));
-        return StoreDetailResponse.of(store, geoCoordinate, storeImages, userDictionary, reviews, visitHistoriesCounter, visitHistories);
+        VisitHistoryCounter visitHistoriesCounter = findVisitHistoriesCountByStoreIdsInDuration(List.of(store.getId()));
+        return StoreDetailResponse.of(store, deviceLocation, storeImages, userDictionary, reviews, visitHistoriesCounter, visitHistories);
     }
 
     private List<Long> concatUserIds(List<Review> reviews, List<VisitHistoryWithUserProjection> visitHistories, Store store) {
         return Stream.of(reviews.stream()
-                .map(Review::getUserId)
-                .collect(Collectors.toList()),
-            visitHistories.stream()
-                .map(VisitHistoryWithUserProjection::getUserId)
-                .collect(Collectors.toList()),
-            List.of(store.getUserId())
-        )
+                    .map(Review::getUserId)
+                    .collect(Collectors.toList()),
+                visitHistories.stream()
+                    .map(VisitHistoryWithUserProjection::getUserId)
+                    .collect(Collectors.toList()),
+                List.of(store.getUserId())
+            )
             .flatMap(Collection::stream)
             .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
     public StoresCursorResponse retrieveMyReportedStoreHistories(RetrieveMyStoresRequest request, Long userId) {
-        List<Store> storesWithNextCursor = storeRepository.findAllByUserIdUsingCursor(userId, request.getCursor(), request.getSize() + 1);
-        CursorPagingSupporter<Store> storesCursor = CursorPagingSupporter.of(storesWithNextCursor, request.getSize());
-        VisitHistoryCounter visitHistoriesCounter = findVisitHistoriesCountByStoreIdsInDuration(storesCursor.getItemsInCurrentCursor());
-        return StoresCursorResponse.of(storesCursor, visitHistoriesCounter, storeRepository.findCountsByUserId(userId));
+        List<StoreWithMenuProjection> storesWithNextCursor = storeRepository.findAllByUserIdUsingCursor(userId, request.getCursor(), request.getSize() + 1);
+        CursorPagingSupporter<StoreWithMenuProjection> storesCursor = CursorPagingSupporter.of(storesWithNextCursor, request.getSize());
+        VisitHistoryCounter visitHistoriesCounter = findVisitHistoriesCountByStoreIdsInDuration(storesCursor.getCurrentCursorItems().stream()
+            .map(StoreWithMenuProjection::getId)
+            .collect(Collectors.toList())
+        );
+        return StoresCursorResponse.of(storesCursor, visitHistoriesCounter, storeRepository.countByUserId(userId));
     }
 
-    private VisitHistoryCounter findVisitHistoriesCountByStoreIdsInDuration(List<Store> stores) {
+    private VisitHistoryCounter findVisitHistoriesCountByStoreIdsInDuration(List<Long> storeIds) {
         LocalDate monthAgo = LocalDate.now().minusMonths(1);
-        List<Long> storeIds = stores.stream()
-            .map(Store::getId).distinct()
-            .collect(Collectors.toList());
-        return VisitHistoryCounter.of(visitHistoryRepository.findCountsByStoreIdWithGroup(storeIds, monthAgo));
+        return VisitHistoryCounter.of(visitHistoryRepository.countGroupingByStoreId(storeIds, monthAgo));
     }
 
     @Transactional(readOnly = true)
-    public CheckExistStoresNearbyResponse checkExistStoresNearby(CheckExistsStoresNearbyRequest request, CoordinateValue mapCoordinate) {
-        boolean isExists = storeRepository.existsStoreAroundInDistance(mapCoordinate.getLatitude(), mapCoordinate.getLongitude(), request.getDistance().getAvailableDistance());
+    public CheckExistStoresNearbyResponse checkExistStoresNearby(CheckExistsStoresNearbyRequest request, LocationValue mapLocation) {
+        boolean isExists = storeRepository.existsStoreAroundInDistance(mapLocation.getLatitude(), mapLocation.getLongitude(), request.getDistance());
         return CheckExistStoresNearbyResponse.of(isExists);
     }
 
